<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/transparent_dark_blue"
    app:cardElevation="0dp"
    app:cardMaxElevation="0dp"
    app:cardCornerRadius="@dimen/zero"
    android:id="@+id/subject_item_id"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_3sdp"
        android:id="@+id/child_root">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/first_constraintLayout_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_2sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_subject_item"
            app:layout_constraintBottom_toTopOf="@+id/third_constraintLayout_item">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_sub_name_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced_microprocessors_subject"
                android:textSize="@dimen/_14ssp"
                android:maxLines="3"
                android:lines="2"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@color/white_text"
                android:layout_marginEnd="@dimen/_5sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/img_subject_item"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/mind"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/first_constraintLayout_item"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:contentDescription="@string/todo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/third_constraintLayout_item"
            android:layout_width="0dp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_2sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_constraintLayout_item"
            app:layout_constraintBottom_toTopOf="@+id/fourth_constraintLayout_item">

            <ImageView
                android:id="@+id/img_qualification_item"
                android:layout_width="@dimen/_17sdp"
                android:layout_height="match_parent"
                android:src="@drawable/form"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/todo"/>

            <TextView
                android:id="@+id/txt_qualification_name_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_qualification"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/white_text"
                android:layout_marginEnd="@dimen/_5sdp"
                app:layout_constraintTop_toTopOf="@+id/img_qualification_item"
                app:layout_constraintBottom_toBottomOf="@id/img_qualification_item"
                app:layout_constraintEnd_toStartOf="@+id/img_qualification_item"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/img_color_item"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/green_fill_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_subject_item"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:contentDescription="@string/todo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fourth_constraintLayout_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_2sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/third_constraintLayout_item"
            app:layout_constraintBottom_toTopOf="@+id/con_extending_card">

            <ImageView
                android:id="@+id/img_year_item"
                android:layout_width="@dimen/_17sdp"
                android:layout_height="match_parent"
                android:src="@drawable/clock_sub"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/todo"/>

            <TextView
                android:id="@+id/txt_year_name_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_5"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/white_text"
                android:layout_marginEnd="@dimen/_5sdp"
                app:layout_constraintTop_toTopOf="@+id/img_year_item"
                app:layout_constraintBottom_toBottomOf="@id/img_year_item"
                app:layout_constraintEnd_toStartOf="@+id/img_year_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_extending_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/fourth_constraintLayout_item"
            app:layout_constraintBottom_toTopOf="@+id/view_line">

            <Button
                android:id="@+id/btn_edit_subject"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                app:layout_constraintHorizontal_weight="4.95"
                android:background="@android:color/transparent"
                app:elevation="@dimen/_20sdp"
                android:elevation="@dimen/_15sdp"
                android:textColor="@color/sliver_text"
                android:text="@string/edit_subject"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/card_view_extednd" />

            <View
                android:id="@+id/card_view_extednd"
                android:layout_width="1dp"
                android:layout_height="@dimen/_40sdp"
                app:layout_constraintStart_toEndOf="@+id/btn_edit_subject"
                app:layout_constraintEnd_toStartOf="@+id/btn_view_subject"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/dark_blue_text"/>

            <Button
                android:id="@+id/btn_view_subject"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                app:layout_constraintHorizontal_weight="4.95"
                android:background="@android:color/transparent"
                app:elevation="@dimen/_20sdp"
                android:elevation="@dimen/_15sdp"
                android:textColor="@color/sliver_text"
                android:text="@string/subject_preview"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/card_view_extednd" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_blue_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>